wdl-analysis/tests/validation/struct-metadata-unsupported.errors
error: use of a `meta` section in a struct definition requires WDL version 1.2
  ┌─ tests/validation/struct-metadata-unsupported:8:5
  │
8 │     meta {
  │     ^^^^

error: use of a `parameter_meta` section in a struct definition requires WDL version 1.2
   ┌─ tests/validation/struct-metadata-unsupported:12:5
   │
12 │     parameter_meta {
   │     ^^^^^^^^^^^^^^

